--- a/src/AttendanceManager/templates/base.html
+++ b/src/AttendanceManager/templates/base.html
@@ -17,6 +17,30 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <a href="{{ url_for('general.index') }}" class="navbar-brand">AttendanceManager</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#content"
+              aria-controls="content" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="content">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+          <li class="nav-item">
+            <a class="nav-link" aria-current="Courses" href="{{ url_for('general.courses') }}">My Courses</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" aria-current="Contact" href="{{ url_for('general.contact') }}">Contact</a>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+  </nav>
+
   {% block content %}{% endblock content %}
 </body>
 
