Login, Signup, Profile

--- a/src/AttendanceManager/templates/auth/signup.html
+++ b/src/AttendanceManager/templates/auth/signup.html
@@ -46,7 +46,7 @@
 
                 <div class="d-flex justify-content-center">
                   <button type="button"
-                    class="btn btn-outline-success btn-lg px-5">Register</button>
+                    class="btn btn-outline-success btn-lg px-5">Sign Up</button>
                 </div>
 
                 <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="#!"
