--- a/src/AttendanceManager/templates/auth/signup.html
+++ b/src/AttendanceManager/templates/auth/signup.html
@@ -3,7 +3,7 @@
 {% block title %} Signup {% endblock title %}
 
 {% block content %}
-<section class="vh-100 bg-image"
+<section class="vh-100 bg-image">
   <div class="mask d-flex align-items-center h-100 gradient-custom-3">
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
@@ -13,7 +13,6 @@
               <h2 class="text-uppercase text-center mb-5">Sign Up</h2>
 
               <form>
-
                 <div class="form-outline mb-4">
                   <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
                   <label class="form-label" for="form3Example1cg">First Name</label>
@@ -61,4 +60,10 @@
     </div>
   </div>
 </section>
+
+<style>
+ .card { 
+ background: #EAEAEA;
+ }
+</style>
 {% endblock content %}
