--- a/src/AttendanceManager/templates/general/fallback.html
+++ b/src/AttendanceManager/templates/general/fallback.html
@@ -4,6 +4,33 @@
 
 {% block content %}
 
-<h1>An error occured, please try again later.</h1>
+<section class="vh-100 gradient-custom">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+          <div class="card bg-succes text-black" style="border-radius: 1rem;">
+            <div class="card-body p-4 text-center">
+  
+              <div class="mb-md-5 mt-md-4 pb-5">
+  
+                <h2 class="fw-bold mb-10 text-uppercase">An error occured, please try again.</h2>
+  
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <style>
+    .card { 
+    background: #EAEAEA;
+    }
+    .text-uppercase{
+    margin-top: 100px;
+    text-align: center;
+    }
+    
+   </style>
 
 {% endblock content %}
