--- a/src/AttendanceManager/templates/student/courses.html
+++ b/src/AttendanceManager/templates/student/courses.html
@@ -4,6 +4,105 @@
 
 {% block content %}
 
-<h1>Courses Student</h1>
+<h2 class="text-uppercase text-center mb-5">Courses Student</h2>
 
+<section class="vh-100 bg-image">
+    <div class="mask d-flex align-items-center h-10 gradient-custom-3">
+      <div class="container h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+            <div class="card" style="border-radius: 15px;">
+              <div class="card-body p-10">
+                 
+                <h2 class="text-uppercase text-center mb-5">Find your enrolled classes here.</h2>
+                <h2 class="text-uppercase text-center mb-5">Fizika II.</h2>
+
+                <table class="table table-striped">
+                    <thead>
+                      <tr>
+                        <th class="text-center ">Nr.</th>
+                        <td class="text-center">Date</td>
+                        <td class="text-center">Attendace</td>
+                        <td class="text-center">Missed</td>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th class="text-center">1</th>
+                        <td class="text-center">2022-10-10</td>
+                        <td class="text-center">X</td>
+                        <td class="text-center"></td>
+                      </tr>
+                      <tr>
+                        <th class="text-center">2</th>
+                        <td class="text-center">2022-10-10</td>
+                        <td class="text-center">X</td>
+                        <td class="text-center"></td>
+                      </tr>
+                      <tr>
+                        <th class="text-center">3</th>
+                        <td class="text-center">2022-10-10</td>
+                        <td class="text-center"></td>
+                        <td class="text-center">X</td>
+                      </tr>
+                      <tr>
+                        <th class="text-center">4</th>
+                        <td class="text-center">2022-10-10</td>
+                        <td class="text-center"></td>
+                        <td class="text-center">X</td>
+                      </tr>
+                      <tr>
+                        <th class="text-center">5</th>
+                        <td class="text-center">2022-10-10</td>
+                        <td class="text-center">X</td>
+                        <td class="text-center"></td>
+                      </tr>
+                      <tr>
+                        <th class="text-center">6</th>
+                        <td class="text-center">2022-10-10</td>
+                        <td class="text-center"></td>
+                        <td class="text-center">X</td>
+                      </tr>
+                      <tr>
+                        <th class="text-center">7</th>
+                        <td class="text-center">2022-10-10</td>
+                        <td class="text-center">X</td>
+                        <td class="text-center"></td>
+                      </tr>
+                      <tr>
+                        <th class="text-center">8</th>
+                        <td class="text-center">2022-10-10</td>
+                        <td class="text-center">X</td>
+                        <td class="text-center"></td>
+                      </tr>
+                      <tr>
+                        <th class="text-center">9</th>
+                        <td class="text-center">2022-10-10</td>
+                        <td class="text-center"></td>
+                        <td class="text-center">X</td>
+                      </tr>
+                      <tr>
+                        <th class="text-center">10</th>
+                        <td class="text-center">2022-10-10</td>
+                        <td class="text-center"></td>
+                        <td class="text-center">X</td>
+                      </tr>
+                    </tbody>
+                  </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <style>
+    .card { 
+    background: #EAEAEA;
+    }
+    h2{
+        margin-top: 70px;
+    }
+   </style>
 {% endblock content %}
