--- a/src/AttendanceManager/templates/auth/signup.html
+++ b/src/AttendanceManager/templates/auth/signup.html
@@ -8,37 +8,37 @@
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-          <div class="card" style="border-radius: 15px;">
+          <div class="card" style="border-radius: 1rem;">
             <div class="card-body p-5">
-              <h2 class="text-uppercase text-center mb-5">Sign Up</h2>
+              <h2 class=" fw-bold text-uppercase text-center mb-5">Sign Up</h2>
 
               <form>
-                <div class="form-outline mb-4">
+                <div class="form-outline text-center mb-4">
                   <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
                   <label class="form-label" for="form3Example1cg">First Name</label>
                 </div>
 
-                <div class="form-outline mb-4">
+                <div class="form-outline text-center mb-4">
                   <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
                   <label class="form-label" for="form3Example1cg">Last Name</label>
                 </div>
 
-                <div class="form-outline mb-4">
+                <div class="form-outline text-center mb-4">
                   <input type="email" id="form3Example3cg" class="form-control form-control-lg" />
                   <label class="form-label" for="form3Example3cg">Your Email</label>
                 </div>
 
-                <div class="form-outline mb-4">
+                <div class="form-outline text-center mb-4">
                   <input type="password" id="form3Example4cg" class="form-control form-control-lg" />
                   <label class="form-label" for="form3Example4cg">Password</label>
                 </div>
 
-                <div class="form-outline mb-4">
+                <div class="form-outline text-center mb-4">
                   <input type="password" id="form3Example4cdg" class="form-control form-control-lg" />
                   <label class="form-label" for="form3Example4cdg">Repeat your password</label>
                 </div>
 
-                <div class="form-outline mb-4">
+                <div class="form-outline text-center mb-4">
                   <input type="text" id="form3Example4cdg" class="form-control form-control-lg" />
                   <label class="form-label" for="form3Example4cdg">Neptun Code</label>
                 </div>
