--- a/src/AttendanceManager/templates/general/profile.html
+++ b/src/AttendanceManager/templates/general/profile.html
@@ -193,7 +193,7 @@
     color: #333;
 }
 .profile-head h6{
-    color: #06D48F;
+    color: #5cb85c;
 }
 .profile-edit-btn{
     border: none;
@@ -223,7 +223,7 @@
 }
 .profile-head .nav-tabs .nav-link.active{
     border: none;
-    border-bottom:2px solid #06D48F;
+    border-bottom:2px solid #5cb85c;
 }
 .profile-work{
     padding: 14%;
@@ -249,7 +249,7 @@
 }
 .profile-tab p{
     font-weight: 600;
-    color: #06D48F;
+    color: #5cb85c;
 }
 
 
