--- a/src/AttendanceManager/templates/base.html
+++ b/src/AttendanceManager/templates/base.html
@@ -27,7 +27,7 @@
 
       <div class="collapse navbar-collapse" id="content">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          
+
           <li class="nav-item">
             <a class="nav-link" aria-current="Courses" href="{{ url_for('general.contact') }}">Contact</a>
           </li>
@@ -49,7 +49,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" aria-current="Courses" href="{{ url_for('general.logout') }}">Log Out</a>
+            <a class="nav-link" aria-current="Courses" href="{{ url_for('auth.logout') }}">Log Out</a>
           </li>
 
           <li class="nav-item">
