--- a/src/AttendanceManager/templates/auth/signup.html
+++ b/src/AttendanceManager/templates/auth/signup.html
@@ -80,7 +80,7 @@
 
   <div class="border-top pt-3">
     <small class="text-muted">
-      Already Have an Account? <a href="#" class="me-2">Log In!</a>
+      Already Have an Account? <a href="{{ url_for('auth.login') }}" class="me-2">Log In!</a>
     </small>
   </div>
 
