--- a/src/AttendanceManager/templates/auth/login.html
+++ b/src/AttendanceManager/templates/auth/login.html
@@ -36,7 +36,7 @@
 
   <div class="border-top pt-3">
     <small class="text-muted">
-      Need an account? <a href="#">Register here!</a>
+      Need an account? <a href="{{ url_for('auth.signup') }}">Register here!</a>
     </small>
   </div>
 
