--- a/src/AttendanceManager/templates/base.html
+++ b/src/AttendanceManager/templates/base.html
@@ -14,12 +14,18 @@
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
           crossorigin="anonymous"></script>
+
+  <link rel="icon" type="image/png" sizes="48x48" href="{{ url_for('static', filename='logo.png') }}">
+
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <a href="{{ url_for('general.index') }}" class="navbar-brand">AttendanceManager </a>
+      <a href="{{ url_for('general.index') }}" class="navbar-brand">
+        <img src="{{ url_for('static', filename='logo.png') }}" width="40px" alt="Logo">
+        AttendanceManager
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#content"
               aria-controls="content" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -32,8 +38,6 @@
             <a class="nav-link" aria-current="Courses" href="{{ url_for('general.contact') }}">Contact</a>
           </li>
 
-          {% if current_user.is_authenticated == True %}
-
           <li class="nav-item">
             <a class="nav-link" aria-current="Courses" href="{{ url_for('general.courses') }}">My Courses</a>
           </li>
@@ -42,44 +46,32 @@
             <a class="nav-link" aria-current="Courses" href="{{ url_for('general.attendance') }}">Attendance</a>
           </li>
 
-          {% endif %}
-
         </ul>
 
         <ul class="navbar-nav mb-2 mb-lg-0">
-
-          {% if current_user.is_authenticated == False %}
 
           <li class="nav-item">
             <a class="nav-link" aria-current="Contact" href="{{ url_for('auth.login') }}">Log In</a>
           </li>
 
           <li class="nav-item">
-            <a class="btn btn-success" aria-current="Contact" href="{{ url_for('auth.signup') }}">Sign Up</a>
+            <a class="nav-link" aria-current="Courses" href="{{ url_for('auth.logout') }}">Log Out</a>
           </li>
 
-          {% endif %}
-
-          {% if current_user.is_authenticated == True %}
-
           <li class="nav-item">
-            <a class="nav-link" aria-current="Courses" href="{{ url_for('auth.logout') }}">Log Out</a>
+            <a class="btn btn-success" aria-current="Contact" href="{{ url_for('auth.signup') }}">Sign Up</a>
           </li>
 
           <li class="nav-item">
             <a class="nav-link" aria-current="Contact" href="{{ url_for('general.profile') }}">Profile</a>
           </li>
 
-          {% endif %}
-
         </ul>
       </div>
     </div>
   </nav>
 
-  <div class="container mt-3">
-    {% block content %}{% endblock content %}
-  </div>
+  {% block content %}{% endblock content %}
 </body>
 
 </html>
