--- a/src/AttendanceManager/templates/student/courses.html
+++ b/src/AttendanceManager/templates/student/courses.html
@@ -6,11 +6,18 @@
 
 
 <div class="row">
-  <div class="col-2">
-    <h2 class="text-uppercase text-center mb-5">Find your enrolled classes here.</h2>    
+  <div class="col-3">
+    <h2 class="border-bottom mb-4">Fizika II.</h2>
+
+    <div class="d-grid gap-2 col-7">
+        <button class="btn btn-primary" type="button">Fizika II.</button>
+        <button class="btn btn-primary" type="button">Villamosságtan II.</button>
+        <button class="btn btn-primary" type="button">Adatbázis I.</button>
+    </div>
+    
   </div>
 
-  <div class="col-10">
+  <div class="col-9">
     <table class="table table-striped">
       <thead>
         <tr>
