--- a/src/AttendanceManager/templates/base.html
+++ b/src/AttendanceManager/templates/base.html
@@ -15,6 +15,10 @@
           integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
           crossorigin="anonymous"></script>
 
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
+  <!-- Custom Favicon -->
   <link rel="icon" type="image/png" sizes="48x48" href="{{ url_for('static', filename='logo.png') }}">
 
 </head>
@@ -23,7 +27,7 @@
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
       <a href="{{ url_for('general.index') }}" class="navbar-brand">
-        <img src="{{ url_for('static', filename='logo.png') }}" width="40px" alt="Logo">
+        <img src="{{ url_for('static', filename='logo.png') }}" height="50px" alt="Logo">
         AttendanceManager
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#content"
@@ -35,43 +39,72 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
           <li class="nav-item">
-            <a class="nav-link" aria-current="Courses" href="{{ url_for('general.contact') }}">Contact</a>
+            <a class="nav-link" aria-current="Courses" href="{{ url_for('general.contact') }}">
+              <i class="bi bi-envelope-fill"></i>
+              Contact
+            </a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" aria-current="Courses" href="{{ url_for('general.courses') }}">My Courses</a>
-          </li>
+          {% if current_user.is_authenticated == True %}
 
           <li class="nav-item">
-            <a class="nav-link" aria-current="Courses" href="{{ url_for('general.attendance') }}">Attendance</a>
+            <a class="nav-link" aria-current="Courses" href="{{ url_for('general.courses') }}">
+              <i class="bi bi-graph-down"></i>
+              My Courses
+            </a>
           </li>
+
+          {% endif %}
 
         </ul>
 
         <ul class="navbar-nav mb-2 mb-lg-0">
+
+          {% if current_user.is_authenticated == False %}
 
           <li class="nav-item">
             <a class="nav-link" aria-current="Contact" href="{{ url_for('auth.login') }}">Log In</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" aria-current="Courses" href="{{ url_for('auth.logout') }}">Log Out</a>
-          </li>
-
-          <li class="nav-item">
             <a class="btn btn-success" aria-current="Contact" href="{{ url_for('auth.signup') }}">Sign Up</a>
           </li>
 
+          {% endif %}
+
+          {% if current_user.is_authenticated == True %}
+
           <li class="nav-item">
-            <a class="nav-link" aria-current="Contact" href="{{ url_for('general.profile') }}">Profile</a>
+            <a class="nav-link" aria-current="Contact" href="{{ url_for('general.profile') }}">
+              <i class="bi bi-person-fill"></i>
+              {{current_user.FirstName}} {{ current_user.LastName }}
+            </a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link" aria-current="Courses" href="{{ url_for('auth.logout') }}">
+              <i class="bi bi-box-arrow-in-right"></i>
+              Log Out
+            </a>
+          </li>
+
+          {% endif %}
 
         </ul>
       </div>
     </div>
   </nav>
 
-  {% block content %}{% endblock content %}
+  <div class="container mt-5">
+    {% block content %} {% endblock content %}
+  </div>
 </body>
+
+<style>
+  nav {
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.95);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
+  }
+</style>
 
 </html>
