--- a/src/AttendanceManager/templates/student/courses.html
+++ b/src/AttendanceManager/templates/student/courses.html
@@ -14,9 +14,9 @@
     <hr>
 
     <div class="d-grid gap-2">
-      <button class="btn btn-primary" type="button">Fizika II.</button>
-      <button class="btn btn-primary" type="button">Villamosságtan II.</button>
-      <button class="btn btn-primary" type="button">Adatbázis I.</button>
+      <button class="btn btn-success" type="button">Fizika II.</button>
+      <button class="btn btn-success" type="button">Villamosságtan II.</button>
+      <button class="btn btn-success" type="button">Adatbázis I.</button>
     </div>
 
   </div>
@@ -108,4 +108,5 @@
     border-right: 1px solid lightgray;
   }
 </style>
+
 {% endblock content %}
