--- a/src/AttendanceManager/templates/general/contact.html
+++ b/src/AttendanceManager/templates/general/contact.html
@@ -4,6 +4,24 @@
 
 {% block content %}
 
-<h1>Contact for Sapientia</h1>
+<h1 class="mb-5">Elérhetőségek</h1>
+
+<h2 class="mb-3">Marosvásárhelyi Kar</h2>
+
+<p>Târgu-Mureş/Corunca (Marosvásárhely/Koronka), Calea Sighișoarei nr. 2.. (26, 27, 44-es közszállítási vonal végállomása)</p>
+<p>Tel: +40 265 206 210, fax: +40 265 206 211</p>
+<p>Postacím: 540485 Târgu-Mureş, O.p. 9, C.p. 4</p>
+<p>E-mail: <a href="mailto://office@ms.sapientia.ro">office@ms.sapientia.ro</a> </p>
+<p>Az egyetem oldala: <a href="https://ms.sapientia.ro/hu/">ms.sapientia.ro</a></p>
+
+<iframe style="border: 0;" src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3313.5929984434256!2d24.598472!3d46.523111!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sro!4v1628771708070!5m2!1sen!2sro" width="800" height="600" allowfullscreen="allowfullscreen"></iframe>
+<style>
+     iframe{
+      -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.95);
+      box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
+
+      border-radius: 10px;
+    }
+  </style>
 
 {% endblock content %}
