--- a/src/AttendanceManager/templates/base.html
+++ b/src/AttendanceManager/templates/base.html
@@ -105,6 +105,10 @@
     -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.95);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
   }
+
+  .nav-item {
+    margin-left: 20px;
+  }
 </style>
 
 </html>
