--- a/src/AttendanceManager/templates/base.html
+++ b/src/AttendanceManager/templates/base.html
@@ -100,7 +100,22 @@
   </div>
 </body>
 
+
+
 <style>
+
+  
+  body {
+    background-image: url("{{ url_for('static', filename='background.jpg') }}");
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
+    background-size: cover; 
+    position: relative;
+    min-height: 60vh;
+    color: black;
+
+  }
+
   nav {
     -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.95);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
