color update in courses

--- a/src/AttendanceManager/templates/student/courses.html
+++ b/src/AttendanceManager/templates/student/courses.html
@@ -101,11 +101,11 @@
 
 <style>
   .card {
-    background: #EAEAEA;
+    background: black;
   }
 
   .menu {
-    border-right: 1px solid lightgray;
+    border-right: 1px solid black;
   }
 </style>
 
