--- a/src/AttendanceManager/templates/general/profile.html
+++ b/src/AttendanceManager/templates/general/profile.html
@@ -4,103 +4,89 @@
 
 {% block content %}
 <fieldset class="form-group panel mt-3 bg-light">
-    <legend class="border-bottom mb-4">Profile!</legend>
-  
-  
-    <form method="POST">
+  <legend class="border-bottom mb-4">
+    <i class="bi bi-person-fill"></i> Profile
+  </legend>
 
-        <div class="col-md-10">
-            <div class="profile-head">
-                <h5>
-                    Jane Smith
-                </h5>
-                <h6>
-                    Automation & Applied Informatics
-                </h6>
-                <h6>
-                    Year Of Studty: III.
-                </h6>
-
-            </div>
-        </div>
+  <form method="POST">
 
     <div class="row mb-3">
-        <div class="form-group">
-            <label for="neptun_code">First_name</label>
-              <div class="input-group has-validation">
-                <input type="text"
-                       name="fisrt_name"
-                       id="first_name"
-                       class="form-control"
-                       placeholder="First Name">
-            </div>
-        </div>
-    </div>
-    
-    <div class="row mb-3">
-        <div class="form-group">
-          <label for="neptun_code">Last Name</label>
-          <div class="input-group has-validation">
-            <input type="text"
-                   name="last_name"
-                   id="last_name"
-                   class="form-control"
-                   placeholder="Last Name">
-          </div>
-        </div>
-    </div>    
-  
-    <div class="row mb-3">
-        <div class="form-group">
-          <label for="neptun_code">Email</label>
-          <div class="input-group has-validation">
-            <input type="text"
-                   name="email"
-                   id="email"
-                   class="form-control"
-                   placeholder="Email">
-          </div>
-        </div>
-    </div>
-    
-      <div class="row mb-3">
-        <div class="form-group">
-          <label for="neptun_code">Neptun Code</label>
-          <div class="input-group has-validation">
-            <input type="text"
-                   name="neptun_code"
-                   id="neptun_code"
-                   class="form-control"
-                   placeholder="ABCDE1">
-          </div>
+      <div class="form-group col-6">
+        <label for="first_name" class="form-label">First Name</label>
+        <div class="input-group has-validation">
+          <input type="text" name="first_name" id="first_name"
+                 class="form-control"
+                 disabled
+                 value="{{ user.FirstName }}">
         </div>
       </div>
-
-  
-      <div class="row mb-3">
-        <div class="form-group col">
-          <button class="btn btn-success">Edit</button>
+      <div class="form-group col-6">
+        <label for="last_name" class="form-label">Last Name</label>
+        <div class="input-group has-validation">
+          <input type="text" name="last_name" id="last_name"
+                 class="form-control"
+                 disabled
+                 value="{{ user.LastName }}">
         </div>
       </div>
+    </div>
 
-    </form>
-  
-  </fieldset>
-  
-  
-  <style>
-    .panel {
-      margin: 0 auto;
-      max-width: 500px;
-    }
-  
-    fieldset {
-      padding: 15px;
-  
-      -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.95);
-      box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
-  
-      border-radius: 10px;
-    }
-  </style>
+    <div class="row mb-3">
+      <div class="form-group ">
+        <label for="department" class="form-label">Department</label>
+        <div class="input-group has-validation">
+          <input type="text" name="department" id="department"
+                 class="form-control"
+                 disabled
+                 value="{{ department.DepartmentName }}">
+        </div>
+      </div>
+    </div>
+
+    <div class="row mb-3">
+      <div class="form-group ">
+        <label for="study_program" class="form-label">Study Program</label>
+        <div class="input-group has-validation">
+          <input type="text" name="study_program" id="study_program"
+                 class="form-control"
+                 disabled
+                 value="{{ study_program.StudyProgramName }}">
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="row mb-3">
+        <label for="neptun_code">Neptun Code</label>
+        <div class="input-group has-validation">
+          <input type="text"
+                 name="neptun_code"
+                 id="neptun_code"
+                 class="form-control"
+                 disabled
+                 value="{{ user.NeptunCode }}">
+        </div>
+      </div>
+    </div>
+
+  </form>
+
+</fieldset>
+
+
+<style>
+  .panel {
+    margin: 0 auto;
+    max-width: 500px;
+  }
+
+  fieldset {
+    padding: 15px;
+
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.95);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
+
+    border-radius: 10px;
+  }
+</style>
 {% endblock content %}
