--- a/src/AttendanceManager/templates/general/contact.html
+++ b/src/AttendanceManager/templates/general/contact.html
@@ -6,19 +6,18 @@
 
 <div class="row panel">
 
-  <h1 class="mb-3">Elérhetőségek</h1>
+  <h1 class="mb-3">Contact</h1>
 
   <hr>
   </hr>
 
-  <h3 class="mb-3">Marosvásárhelyi Kar</h3>
+  <h3 class="mb-3">Faculty of Technical and Human Sciences, Târgu-Mureș</h3>
 
-  <p>Târgu-Mureş/Corunca (Marosvásárhely/Koronka), Calea Sighișoarei nr. 2.. (26, 27, 44-es közszállítási vonal
-    végállomása)</p>
+  <p>Târgu-Mureş - Corunca, Calea Sighișoarei nr. 2.</p>
   <p>Tel: +40 265 206 210, fax: +40 265 206 211</p>
-  <p>Postacím: 540485 Târgu-Mureş, O.p. 9, C.p. 4</p>
+  <p>Mail box: 540485 Târgu-Mureş, Op. 9., Cp. 4</p>
   <p>E-mail: <a href="mailto://office@ms.sapientia.ro">office@ms.sapientia.ro</a> </p>
-  <p>Az egyetem oldala: <a href="https://ms.sapientia.ro/hu/">ms.sapientia.ro</a></p>
+  <p>University website: <a href="https://ms.sapientia.ro/hu/">ms.sapientia.ro</a></p>
 
   <hr>
   </hr>
