teacher courses update table

--- a/src/AttendanceManager/templates/teacher/courses.html
+++ b/src/AttendanceManager/templates/teacher/courses.html
@@ -15,9 +15,10 @@
       <hr>
   
       <div class="d-grid gap-2">
-        <button class="btn btn-success" type="button">Fizika II.</button>
-        <button class="btn btn-success" type="button">Villamosságtan II.</button>
-        <button class="btn btn-success" type="button">Adatbázis I.</button>
+        <button class="btn btn-success" type="button">Rendszerelmélet I.</button>
+        <button class="btn btn-success" type="button">Rendszerelmélet II. - gyakorlat</button>
+        <button class="btn btn-success" type="button">Automaták és mikroprogramozás</button>
+        <button class="btn btn-success" type="button">Digitális jelfeldolgozás</button>
       </div>
   
     </div>
@@ -58,7 +59,7 @@
         </div>
       </div>
       
-      <h2>Fizika II.</h2>
+      <h2>Rendszerelmélet II.</h2>
   
       <table class="table table-striped">
         <thead>
