--- a/src/AttendanceManager/templates/general/profile.html
+++ b/src/AttendanceManager/templates/general/profile.html
@@ -3,7 +3,7 @@
 {% block title %} Profile for {{ current_user.FirstName }} {{ current_user.LastName }} {% endblock title %}
 
 {% block content %}
-<fieldset class="form-group panel mt-3 bg-light">
+<fieldset class="form-group panel mt-3">
   <legend class="border-bottom mb-4">
     <i class="bi bi-person-fill"></i> Profile
   </legend>
