Updated Contact View

--- a/src/AttendanceManager/templates/general/contact.html
+++ b/src/AttendanceManager/templates/general/contact.html
@@ -13,14 +13,16 @@
 
   <h3 class="mb-3">Faculty of Technical and Human Sciences, Târgu-Mureș</h3>
 
-  <p>Târgu-Mureş - Corunca, Calea Sighișoarei nr. 2.</p>
-  <p>Tel: +40 265 206 210, fax: +40 265 206 211</p>
-  <p>Mail box: 540485 Târgu-Mureş, Op. 9., Cp. 4</p>
-  <p>E-mail: <a href="mailto://office@ms.sapientia.ro">office@ms.sapientia.ro</a> </p>
-  <p>University website: <a href="https://ms.sapientia.ro/hu/">ms.sapientia.ro</a></p>
+  <p class="ms-3"><b>Location:</b> Târgu-Mureş/Corunca, Calea Sighișoarei nr. 2.</p>
+  <p class="ms-3"><b>Telephone</b> +40 265 206 210</p>
+  <p class="ms-3"><b>Fax:</b> +40 265 206 211</p>
+  <p class="ms-3"><b>Mail box:</b> 540485 Târgu-Mureş, Op. 9., Cp. 4</p>
+  <p class="ms-3"><b>E-mail:</b> <a href="mailto://office@ms.sapientia.ro">office@ms.sapientia.ro</a> </p>
+  <p class="ms-3"><b>Website:</b> <a href="https://ms.sapientia.ro/hu/" target="_blank">https://ms.sapientia.ro</a></p>
+
+  <h4 class="mt-3 mb-3"><b>Location on Google Maps</b></h4>
 
   <hr>
-  </hr>
 
   <iframe
     src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3313.5929984434256!2d24.598472!3d46.523111!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sro!4v1628771708070!5m2!1sen!2sro"
@@ -30,6 +32,15 @@
 </div>
 
 <style>
+  a {
+    color: black;
+    text-decoration: none;
+  }
+
+  a:hover {
+    color: darkgray;
+  }
+
   iframe {
     border-radius: 25px;
     margin: 0 auto;
