--- a/src/AttendanceManager/templates/teacher/courses.html
+++ b/src/AttendanceManager/templates/teacher/courses.html
@@ -38,6 +38,7 @@
       <div class="float-end">
         <button class="btn btn-success" data-bs-toggle="modal"
                 data-bs-target="#newOccasion">Create New Occasion</button>
+        <button class="btn btn-primary">Enrolled Students</button>
       </div>
 
       <hr>
