--- a/src/AttendanceManager/templates/student/courses.html
+++ b/src/AttendanceManager/templates/student/courses.html
@@ -22,7 +22,7 @@
     <div class="list-group">
       {% for course in courses %}
       <a class="btn btn-success text-start mb-2"
-         href="{{ url_for('general.courses', selected_course=course.CourseID) }}">
+        href="{{ url_for('general.courses', selected_course=course.CourseID) }}">
         {{ loop.index }}. {{ course.Name }}
       </a>
       {% endfor %}
@@ -32,18 +32,12 @@
 
   <div class="col-9">
 
-    {% if selected_course != None %}
+    {% if selected_course != None and approved == True %}
     <h3>
       {{ selected_course.Name }}
-
-      <div class="float-end">
-        <button class="btn btn-success" data-bs-toggle="modal"
-                data-bs-target="#newOccasion">Create New Occasion</button>
-      </div>
-
-      <hr>
-
     </h3>
+
+    <hr>
 
     <table style="background-color: white;" class="table table-striped table-hover table-bordered text-center">
       <thead class="table-dark">
@@ -51,9 +45,7 @@
           <th>Occasion #</th>
           <td>Date & Time</td>
           <td>Type</td>
-          <td>Total</td>
           <td>Attended</td>
-          <td>Actions</td>
         </tr>
       </thead>
       <tbody class="table-group-divider">
@@ -63,24 +55,13 @@
           <td>{{ occasion.Date }}</td>
           <td>{{ course_types[occasion.CourseType].CourseTypeName }}</td>
           <td>0</td>
-          <td>0</td>
-          <td>
-            <div class="btn-group">
-              <a class="btn btn-primary">
-                <i class="bi bi-person-lines-fill"></i>
-              </a>
-              <a class="btn btn-success" data-bs-toggle="modal"
-                data-bs-target="#newCourseModal"><i class="bi bi-qr-code"></i></a>
-              <a class="btn btn-danger">
-                <i class="bi bi-pencil-square"></i>
-              </a>
-            </div>
-          </td>
         </tr>
         {% endfor %}
       </tbody>
     </table>
 
+    {% elif selected_course != None and approved == False %}
+    <h4 class="text-danger">You have not been approved to join this course yet!</h4>
     {% else %}
     <h4 class="text-danger">No courses available!</h4>
     {% endif %}
@@ -90,32 +71,44 @@
 
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
          aria-labelledby="staticBackdropLabel" aria-hidden="true">
+
+      <form method="POST">
+
       <div class="modal-dialog">
         <div class="modal-content">
+          
           <div class="modal-header">
             <h1 class="modal-title fs-5" id="staticBackdropLabel">Enroll in New Course</h1>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
+
           <div class="modal-body">
+
             <div class="row mb-3">
               <div class="form-group">
                 <label for="course_code">Enter Course Code</label>
                 <div class="input-group has-validation">
                   <input type="text"
                          name="course_code"
-                         id="course_code"
                          class="form-control"
-                         placeholder="ABCDE1">
+                         placeholder="Course Code">
                 </div>
               </div>
             </div>
+
+            <input type="hidden" name="request_type" value="enroll_course">
+
           </div>
+
           <div class="modal-footer">
             <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-success">Enroll</button>
+            <button type="submit" class="btn btn-success">Enroll</button>
           </div>
         </div>
       </div>
+
+      </form>
+
     </div>
 
 <style>
