--- a/src/AttendanceManager/templates/auth/login.html
+++ b/src/AttendanceManager/templates/auth/login.html
@@ -10,7 +10,10 @@
 
     <div class="row mb-3">
       <div class="form-group">
-        <label for="email" class="form-label">E-mail</label>
+        <label for="email" class="form-label">
+          <i class="bi bi-info-circle-fill text-danger"></i>
+          E-mail
+        </label>
         <div class="input-group has-validation">
           <input type="email" name="email" id="email" class="form-control" placeholder="user@example.com">
         </div>
@@ -19,11 +22,20 @@
 
     <div class="row mb-3">
       <div class="form-group">
-        <label for="password" class="form-label">Password</label>
+        <label for="password" class="form-label">
+          <i class="bi bi-info-circle-fill text-danger"></i>
+          Password
+        </label>
         <div class="input-group has-validation">
           <input type="password" name="password" id="password" class="form-control" placeholder="Enter password">
         </div>
       </div>
+    </div>
+
+    <div class="row mb-3">
+      <small class="text-danger">
+        <i class="bi bi-info-circle-fill text-danger"></i> - Required field
+      </small>
     </div>
 
     <div class="row mb-3">
