--- a/src/AttendanceManager/templates/auth/signup.html
+++ b/src/AttendanceManager/templates/auth/signup.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <fieldset class="form-group panel bg-light">
-  <legend class="border-bottom mb-4">Sign Up!</legend>
+  <legend class="border-bottom mb-4">Sign Up</legend>
 
   <form method="POST">
 
