--- a/src/AttendanceManager/templates/auth/login.html
+++ b/src/AttendanceManager/templates/auth/login.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <fieldset class="form-group panel mt-3">
-  <legend class="border-bottom mb-4">Log in!</legend>
+  <legend class="border-bottom mb-4">Log In</legend>
 
   <form method="POST">
 
