--- a/src/AttendanceManager/templates/base.html
+++ b/src/AttendanceManager/templates/base.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-light sticky-top">
+  <nav class="navbar navbar-expand-lg sticky-top">
     <div class="container-fluid">
       <a href="{{ url_for('general.index') }}" class="navbar-brand">
         <img src="{{ url_for('static', filename='logo.png') }}" height="50px" alt="Logo">
@@ -123,6 +123,9 @@
   nav {
     -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
+
+    background: rgba(245, 245, 245, 0.8);
+    backdrop-filter: blur(7px);
   }
 
   .nav-item {
@@ -137,9 +140,13 @@
   }
 
   .panel {
-    background: rgba(245, 245, 245, 0.9);
-    padding: 10px;
+    background: rgba(245, 245, 245, 0.8);
+    padding: 15px;
     border-radius: 10px;
+
+    backdrop-filter: blur(7px);
+
+    margin: 0 auto;
 
     -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
